[package]
name = "ic-bn-lib"
description = "Internet Computer Boundary Nodes shared modules"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/dfinity/ic-bn-lib"
readme = "README.md"

[features]
default = []
clients-hyper = ["dep:hyper-rustls"]
acme = ["dep:instant-acme", "dep:rcgen", "dep:hyper-rustls"]
acme_dns = ["acme", "dep:cloudflare"]
acme_alpn = ["acme", "dep:rustls-acme"]
vector = ["dep:vrl", "dep:prost", "dep:prost-types"]

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.93"
arc-swap = "1.7.1"
async-trait = "0.1.83"
axum = "0.8.1"
base64 = "0.22.1"
bytes = "1.10.0"
candid = "0.10.10"
clap = { version = "4.5.20", features = ["derive", "string", "env"] }
chacha20poly1305 = "0.10.1"
cloudflare = { version = "0.13.0", default-features = false, features = [
    "rustls-tls",
], optional = true }
derive-new = "0.7.0"
fqdn = "0.4.1"
futures = "0.3.31"
futures-util = "0.3.31"
hickory-proto = "0.25.1"
hickory-resolver = { version = "0.25.1", features = [
    "tls-ring",
    "https-ring",
    "dnssec-ring",
    "webpki-roots",
] }
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.2"
humantime = "2.2.0"
hyper = "1.6.0"
hyper-rustls = { version = "0.27.5", optional = true, default-features = false, features = [
    "http1",
    "http2",
    "tls12",
    "native-tokio",
    "ring",
    "logging",
    "webpki-roots",
] }
hyper-util = { version = "0.1.10", features = ["full"] }
indoc = "2.0.6"
instant-acme = { version = "0.7.2", default-features = false, features = [
    "ring",
    "hyper-rustls",
], optional = true }
moka = { version = "0.12.8", features = ["sync", "future"] }
nix = { version = "0.30.0", features = ["signal"] }
parse-size = { version = "1.1.0", features = ["std"] }
ppp = "2.3.0"
prometheus = "0.14.0"
prost = { version = "0.13.3", optional = true }
prost-types = { version = "0.13.3", optional = true }
rand = { version = "0.8.5", features = ["small_rng"] }
rcgen = { version = "0.13.1", optional = true }
reqwest = { version = "0.12.12", default-features = false, features = [
    "http2",
    "rustls-tls",
    "hickory-dns",
    "json",
    "stream",
] }
rustls = { version = "0.23.18", default-features = false, features = [
    "ring",
    "std",
    "brotli",
] }
rustls-acme = { version = "0.13.0", default-features = false, features = [
    "tls12",
    "ring",
], optional = true }
rustls-pemfile = "2.2.0"
rustls-platform-verifier = "0.5.0"
scopeguard = "1.2.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sha1 = "0.10.6"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
systemstat = "0.2.3"
tempdir = "0.3.7"
thiserror = "2.0.3"
tokio = { version = "1.44.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["full"] }
tokio-rustls = { version = "0.26.0", default-features = false, features = [
    "tls12",
    "logging",
    "ring",
] }
tokio-io-timeout = "1.2.0"
tower = { version = "0.5.1", features = ["util"] }
tower-service = "0.3.3"
tracing = "0.1.40"
url = "2.5.3"
# DO NOT upgrade, this breaks monorepo compatibility
# Read https://github.com/uuid-rs/uuid/releases/tag/1.13.0
uuid = { version = "=1.12.1", features = ["v7"] }
vrl = { version = "0.23.0", default-features = false, features = [
    "value",
], optional = true }
webpki-root-certs = "0.26.6"
x509-parser = "0.17.0"
zeroize = { version = "1.8.1", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
mockall = "0.13.0"
mock-io = { version = "0.3.2", features = ["full"] }
rand_regex = "0.17.0"

[[bench]]
name = "vector"
harness = false
