[workspace]
resolver = "3"
members = ["ic-bn-lib", "ic-bn-lib-common"]
default-members = ["ic-bn-lib", "ic-bn-lib-common"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/dfinity/ic-bn-lib"
repository = "https://github.com/dfinity/ic-bn-lib"
readme = "README.md"
keywords = ["internet-computer", "icp", "dfinity", "boundary-nodes"]
categories = []

[workspace.dependencies]
anyhow = "1.0.93"
async-trait = "0.1.83"
axum = "0.8.1"
candid = "0.10.10"
clap = { version = "4.5.20", features = ["derive", "string", "env"] }
cloudflare = { version = "0.14.0", default-features = false, features = [
    "rustls-tls",
] }
derive-new = "0.7.0"
fqdn = { version = "0.4.1", features = ["serde"] }
hickory-proto = "0.25.1"
hickory-resolver = { version = "0.25.1", features = [
    "tls-ring",
    "https-ring",
    "dnssec-ring",
    "webpki-roots",
] }
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.2"
humantime = "2.2.0"
hyper = "1.7.0"
hyper-util = { version = "0.1.10", features = ["full"] }
ic-agent = { version = "0.44", features = [
    "ring",
    "_internal_dynamic-routing",
] }
instant-acme = { version = "0.8.2", default-features = false, features = [
    "ring",
    "hyper-rustls",
] }
mockall = "0.13.0"
parse-size = { version = "1.1.0", features = ["std"] }
prometheus = "0.14.0"
reqwest = { version = "0.12.12", default-features = false, features = [
    "blocking",
    "http2",
    "rustls-tls",
    "hickory-dns",
    "json",
    "stream",
    "gzip",
] }
rcgen = { version = "0.14.3" }
rustls = { version = "0.23.18", default-features = false, features = [
    "ring",
    "std",
    "brotli",
] }
serde = { version = "1.0.214", features = ["derive"] }
socket2 = "0.6.0"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
thiserror = "2.0.3"
tokio-util = { version = "0.7.12", features = ["full"] }
tower-service = "0.3.3"
url = "2.5.3"
# DO NOT upgrade, this breaks monorepo compatibility
# Read https://github.com/uuid-rs/uuid/releases/tag/1.13.0
uuid = { version = "=1.12.1", features = ["v7"] }
