[package]
name = "ic-bn-lib"
description = "Internet Computer Boundary Nodes shared modules"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/dfinity/ic-bn-lib"
readme = "README.md"

[features]
default = []

acme = [
    "dep:instant-acme",
    "dep:rcgen",
    "dep:hyper-rustls",
    "dep:tar",
    "dep:flate2",
    "dep:hex",
    "dep:sha2",
]
acme-dns = ["acme", "dep:cloudflare"]
acme-alpn = ["acme", "dep:rustls-acme"]
clients-hyper = ["dep:hyper-rustls"]
custom-domains = []
cert-providers = ["custom-domains"]
sev-snp = ["dep:sev"]
vector = ["dep:vrl", "dep:prost", "dep:prost-types"]

[dependencies]
ahash = "0.8.11"
anyhow = { workspace = true }
arc-swap = "1.7.1"
async-channel = "2.3.1"
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = "0.10.0"
base64 = "0.22.1"
bytes = "1.10.0"
candid = { workspace = true }
clap = { workspace = true }
chacha20poly1305 = "0.10.1"
cloudflare = { workspace = true, optional = true }
derive-new = { workspace = true }
flate2 = { version = "1.0", optional = true }
fqdn = { workspace = true }
futures = "0.3.31"
futures-util = "0.3.31"
governor = "0.10.0" # must match tower-governor deps
hex = { version = "0.4.3", optional = true }
hickory-proto = { workspace = true }
hickory-resolver = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
humantime = { workspace = true }
hyper = { workspace = true }
hyper-rustls = { version = "0.27.5", optional = true, default-features = false, features = [
    "http1",
    "http2",
    "tls12",
    "native-tokio",
    "ring",
    "logging",
    "webpki-roots",
] }
hyper-util = { workspace = true }
ic-agent = { workspace = true }
ic-bn-lib-common = { git = "https://github.com/dfinity/ic-bn-lib", rev = "2ab3e0998b7ffddc7a01bb8fca688fed2fbe0afc" }
indoc = "2.0.6"
instant-acme = { workspace = true, optional = true }
itertools = "0.14.0"
moka = { version = "0.12.8", features = ["sync", "future"] }
nix = { version = "0.30.0", features = ["signal"] }
ppp = "2.3.0"
prometheus = { workspace = true }
prost = { version = "0.14.1", optional = true }
prost-types = { version = "0.14.1", optional = true }
rand = { version = "=0.8.5", features = ["small_rng"] }
rcgen = { workspace = true, optional = true }
regex = "1.11.2"
reqwest = { workspace = true }
rustls = { version = "0.23.18", default-features = false, features = [
    "ring",
    "std",
    "brotli",
] }
rustls-acme = { version = "0.14.0", default-features = false, features = [
    "webpki-roots",
    "tls12",
    "ring",
], optional = true }
rustls-pemfile = "2.2.0"
rustls-platform-verifier = "0.6.0"
scopeguard = "1.2.0"
serde = { workspace = true }
serde_json = "1.0.132"
serde_with = "3.14.0"
serde_yaml_ng = "0.10"
sev = { version = "6.1.0", optional = true }
sha1 = "0.10.6"
sha2 = { version = "0.10.9", optional = true }
socket2 = "0.6.0"
strum = { workspace = true }
strum_macros = { workspace = true }
systemstat = "0.2.3"
tar = { version = "0.4.44", optional = true }
tempfile = "3.23"
thiserror = { workspace = true }
tokio = { version = "1.47.0", features = ["full"] }
tokio-util = { workspace = true }
tokio-rustls = { version = "0.26.0", default-features = false, features = [
    "tls12",
    "logging",
    "ring",
] }
tokio-io-timeout = "1.2.0"
tower = { version = "0.5.1", features = ["util"] }
tower_governor = { version = "0.8" }
tower-service = { workspace = true }
tracing = { version = "0.1.40", features = ["attributes"] }
url = { workspace = true }
# DO NOT upgrade, this breaks monorepo compatibility
# Read https://github.com/uuid-rs/uuid/releases/tag/1.13.0
uuid = { version = "=1.12.1", features = ["v7"] }
vrl = { version = "0.26.0", default-features = false, features = [
    "value",
], optional = true }
webpki-root-certs = "1.0.1"
x509-parser = "0.17.0"
zeroize = { version = "1.8.1", features = ["derive"] }
zstd = "0.13.2"

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports", "async_tokio"] }
mockall = { workspace = true }
mock-io = { version = "0.3.2", features = ["full"] }
# Do not upgrade unless you want to upgrade `rand` too
rand_regex = "=0.17.0"
tempfile = "3.20.0"

[[bench]]
name = "vector"
harness = false
required-features = ["vector"]

[package.metadata.cargo-all-features]
# Limit feature combinations to reduce test duration
max_combination_size = 2
